# swagger.yaml
@@ -177,3 +177,56 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+  /faculties:
+    get:
+      summary: Get all faculties
+      tags:
+        - Faculties
+      responses:
+        '200':
+          description: List of all faculties
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                    code:
+                      type: string
+                    title:
+                      type: string
+
+  /departments/by-faculty/{facultyId}:
+    get:
+      summary: Get departments by faculty
+      tags:
+        - Departments
+      parameters:
+        - in: path
+          name: facultyId
+          required: true
+          schema:
+            type: string
+          description: Faculty ID to filter departments
+      responses:
+        '200':
+          description: List of departments for the specified faculty
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                    code:
+                      type: string
+                    title:
+                      type: string
+                    faculty:
+                      type: string
